modifications apportees a index.html et add css dir

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -37,7 +37,7 @@
                 <form class="search">
                     <div class="pin"><img src="images/logo/pin.png" alt="pin logo"></div>
                     <input class="typebar" type="text" id="query" name="town"
-                    placeholder="Ville, pays" value="Marseille, France"/>
+                    placeholder="Marseille, France"/>
                     <button type="submit" class="searchbutton-desktop">Rechercher</button>
                     <button id="search-mobile"><i class="fa fa-search search-icon"></i></button>
                 </form>
