modifications html et css

--- a/index.html
+++ b/index.html
@@ -17,59 +17,58 @@
 <body>
     <div class="main-container">
         <header> 
-            <section id="header">
+            <section class="header">
                  <img class="logo-booki" src="images/logo/Booki.png" alt="Logo Booki" />
                    <div class="menu">
                       <nav>
-                        <a href="#hebergements" class="menu-lien1">Hébergements</a>
-                        <a href="#activites-marseille" class="menu-lien2">Activités</a>
+                        <a href="#hebergements">Hébergements</a>
+                        <a href="#activites-marseille">Activités</a>
                       </nav>
                     </div>
             </section>
         </header>
         <main>
-        <section id="info-group">
-                <div id="headline">
-                <h2>Trouvez votre hébergement pour des vacances de rêve</h2>
-                <p>En plein centre-ville ou en pleine nature</p>
+        <section class="info-group">
+                <div class="headline">
+                   <h2>Trouvez votre hébergement pour des vacances de rêve</h2>
+                   <p>En plein centre-ville ou en pleine nature</p>
                 </div>
-            <section id="fonction-recherche">
+            <section class="search-bar">
                 <form class="search">
                     <div class="pin"><img src="images/logo/pin.png" alt="pin logo"></div>
-                    <input class="typebar" type="text" id="query" name="town"
-                    placeholder="Marseille, France"/>
+                    <input class="typebar" type="text" id="query" name="town" placeholder="Marseille, France"/>
                     <button type="submit" class="searchbutton-desktop">Rechercher</button>
-                    <button id="search-mobile"><i class="fa fa-search search-icon"></i></button>
+                    <button class="search-mobile"><i class="fa fa-search search-icon"></i></button>
                 </form>
             </section>
-            <div id="filter-bar">
+            <div class="filter-bar">
                 <p>Filtres</p>
-                <div id="filters">
-                  <div class="filters-list">
-                    <i class="fa fa-money-bill-wave filters-icons"></i>
-                    <span>Économique</span>
-                  </div>
-                  <div class="filters-list">
-                    <i class="fa fa-male filters-icons"></i>
-                    <span>Familial</span> 
-                  </div>
-                  <div class="filters-list">
-                    <i class="fa fa-heart filters-icons"></i>
-                    <span>Romantique</span> 
-                  </div>
-                  <div class="filters-list">
-                    <i class="fa fa-fire filters-icons"></i>
-                    <span>Nos pépites</span> 
-                  </div>
-              </div>
-            </div>
-            <div id="info">
-                <div id="info-icon">
+                   <div class="filters">
+                      <div class="filters-list">
+                       <i class="fa fa-money-bill-wave filters-icons"></i>
+                       <span>Économique</span>
+                      </div>
+                      <div class="filters-list">
+                        <i class="fa fa-male filters-icons"></i>
+                        <span>Familial</span> 
+                      </div>
+                      <div class="filters-list">
+                         <i class="fa fa-heart filters-icons"></i>
+                         <span>Romantique</span> 
+                       </div>
+                      <div class="filters-list">
+                        <i class="fa fa-fire filters-icons"></i>
+                        <span>Nos pépites</span> 
+                      </div>
+                 </div>
+             </div>
+            <div class="info">
+                <div class="info-icon">
                    <i class="fa fa-info filters-icons-info"></i>
                 </div>
-                <p>Plus de 500 logements sont disponibles dans cette ville</p>
+                  <p>Plus de 500 logements sont disponibles dans cette ville</p>
             </div> 
-        </section>  
+         </section>  
             <div class="hebergements-and-populaires">
                 <section id="hebergements">
                     <h2 class="hebergements-title">Hébergements à Marseille</h2>
@@ -191,7 +190,6 @@
                     </div>
                     <h3 class="afficher-plus"><a href="#">Afficher plus</a></h3>
                 </section>
-
                 <section class="populaires">
                     <div class="populaires-title">
                         <h2 class="section-title">Les plus populaires</h2>
@@ -260,7 +258,7 @@
             </div>
             <section id="activites-marseille"> 
                 <h2>Activités à Marseille</h2>
-                <div id="activites-cards">
+                  <div class="activites-cards">
                     <div class="a-card">
                       <a href="#">
                         <article>
@@ -297,7 +295,7 @@
             </section>
         </main>
         <footer>
-            <section id="footer">
+            <section class="footer">
                 <div class="footer-content"> 
                     <h2>À propos</h2>
                     <p class="footer-list">
